resolved the overflow of selfie, also changed glow on dropdown

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ color:whitesmoke;
 
 #a:hover,a:active {
 
-color: grey;
+color: rgb(84, 225, 250);
 
 } 
 
@@ -103,7 +103,8 @@ p {
  .selfie {
 
     float: right;
-    border: 5px dotted #555;
+    overflow: hidden;
+    border: 5px solid #555;
     padding: 10x; 
     border-radius: 100%;
     border-width: 10px;
@@ -130,7 +131,7 @@ p {
     position: absolute;
     background-color: whitesmoke;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgb(45, 133, 96);
+    box-shadow: 0px 8px 16px 0px rgb(232, 240, 237);
     z-index: 1;
   }
   
